# MeshToVox

./: .gitignore  Cargo.toml  README.md  build.rs
src/: arrayvec.rs  io.rs  main.rs  octree.rs  shader_import.rs  space_filling.rs  utils.rs  voxelizer.rs
src/gpu/: mod.rs  passes.rs  singleton.rs  wrappers.rs
src/io/: gltf.rs  magaica.rs  mod.rs  obj.rs
src/shaders/: shade.slang
src/split/: data.rs  descriptors.rs  mod.rs  razter.rs  save.rs  textures.rs  uniforms.rs
