[package]
name = "mesh_to_vox"
version = "0.1.0"
edition = "2021"
keywords = ["glTF", "3D", "cli"]
description = "A program to convert triangle meshes to voxels."
license = "Unlicense"

[dependencies]
image = {version = "0.25.1"}
gltf = {version = "1.4.0", default-features = false, features = ["import", "utils", "KHR_materials_pbrSpecularGlossiness"]}
vox_writer = "0.1.9"
json = {version = "0.12.4", default-features = false}

nalgebra = {version = "0.32.0"}
nalgebra-glm  = {version = "0.18.0"}
clap = {version = "4.5.4", features = ["derive"]}

